Create 'Hero' section.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,19 @@
                 <div class="link-three">header link three</div>
             </div>
         </div>
+
+       <div class="main">
+          <div class="leftside">
+              <div class="hero">This website is awesome</div>
+              <div class="secondary">This website has some subtext that goes under the main title. It's a smaller
+              font and the color is lower contrast</div>
+              <div class="button">Sign up</div>
+          </div>
+          <div class="rightside">
+            <img src="https://cdn.pixabay.com/photo/2020/12/16/12/05/horse-5836459_1280.jpg" alt="Grey horse head on in forest background">
+          </div>
+        </div>
+
+        
    </body>
  </html>
