--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
           </div>
         </div>
 
+      <div class="information">Some random information.</div>
+          <div class="container">
+              <div class="info">
+                <img src="https://cdn.pixabay.com/photo/2021/09/28/14/39/horse-6664660__480.jpg" alt="black horse with head over fence">
+                <div class="text">this is some subtext under and illustration or image</div>
+              </div>
+
+              <div class="info">
+                <img src="https://cdn.pixabay.com/photo/2016/01/14/00/26/horse-1139142__340.jpg" alt="horse being ridden with woman in polka dot dress">
+                <div class="text">this is some subtext under and illustration or image</div>
+              </div>
+
+              <div class="info">
+                 <img src="https://cdn.pixabay.com/photo/2018/03/04/14/14/horse-3198112__340.jpg" alt="paint horse with black background">
+                 <div class="text">this is some subtext under and illustration or image</div>
+              </div>
+
+              <div class="info">
+                <img src="https://cdn.pixabay.com/photo/2019/12/01/00/39/haflinger-4664537__480.jpg" alt="haflinger horse looking over fence">
+                <div class="text">this is some subtext under and illustration or image</div>
+              </div>
+          </div>
+
+      
         
    </body>
  </html>
