Add and style buttons.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <div class="hero">This website is awesome</div>
               <div class="secondary">This website has some subtext that goes under the main title. It's a smaller
               font and the color is lower contrast</div>
-              <div class="button">Sign up</div>
+              <div class="button"><button type="button">Sign up</button></div>
           </div>
           <div class="rightside">
             <img src="https://cdn.pixabay.com/photo/2020/12/16/12/05/horse-5836459_1280.jpg" alt="Grey horse head on in forest background">
@@ -67,7 +67,7 @@
             <div class="sign-up">Sign up for our product by clicking that button right over there!</div>
           </div>
           <div class="right">
-            <div class="button-two">Sign up</div>
+            <div class="button-two"><button type="button">Sign up</button></div>
           </div>
   </div>
 </div>
